cmake_minimum_required(VERSION 3.26)
project(Chapter02)

set(CMAKE_CXX_STANDARD 20)

add_executable(DefaultParam DefaultParam.cpp)
add_executable(DefaultParameter2 DefaultParameter2.cpp)
add_executable(FuncPoly FuncPoly.cpp)
add_executable(FuncAmbiguity FuncAmbiguity.cpp)
add_executable(FuncTemplate1 FuncTemplate1.cpp)
add_executable(FuncTemplate2 FuncTemplate2.cpp)
add_executable(InlineSample InlineSample.cpp)
add_executable(NamespaceSample NamespaceSample.cpp)
add_executable(NamespaceUsing NamespaceUsing.cpp)
add_executable(NamespaceNested NamespaceNested.cpp)
add_executable(NamespaceOver NamespaceOver.cpp)
add_executable(IdSearchSeq1 IdSearchSeq1.cpp)
add_executable(IdSearchSeq2 IdSearchSeq2.cpp)
add_executable(IdSearchSeq3 IdSearchSeq3.cpp)
add_executable(IdSearchSeq4 IdSearchSeq4.cpp)
add_executable(IdSearchSeq5 IdSearchSeq5.cpp)
