cmake_minimum_required(VERSION 3.26)
project(Chapter03)

set(CMAKE_CXX_STANDARD 20)

add_executable(HelloOOP2 HelloOOP2.c)
add_executable(HelloOOP3 HelloOOP3.c)
add_executable(HelloOOP HelloOOP.cpp)
add_executable(MemberInit1 MemberInit1.cpp)
add_executable(MemberInit2 MemberInit2.cpp)
add_executable(MemberInit3 MemberInit3.cpp)
add_executable(MemberInit4 MemberInit4.cpp)
add_executable(MemberInit5 MemberInit5.cpp)
add_executable(AccessCtrl AccessCtrl.cpp)
add_executable(Constructor Constructor.cpp)
add_executable(Constructor2 Constructor2.cpp)
add_executable(ClassNew ClassNew.cpp)
add_executable(RefSample RefSample.cpp)
add_executable(ConstructorOver1 ConstructorOver1.cpp)
add_executable(ConstructorOver2 ConstructorOver2.cpp)
add_executable(ExpDefaultConstructor ExpDefaultConstructor.cpp)
add_executable(ThisPointer ThisPointer.cpp)
add_executable(ConstMethod1 ConstMethod1.cpp)
add_executable(ConstMethod2 ConstMethod2.cpp)
add_executable(ConstCastSample ConstCastSample.cpp)
add_executable(MemberNotOver MemberNotOver.cpp)
add_executable(MemberOver1 MemberOver1.cpp)
add_executable(MemberOver2 MemberOver2.cpp)
add_executable(StaticMember StaticMember.cpp)
