cmake_minimum_required(VERSION 3.29)
project(Chapter05)

set(CMAKE_CXX_STANDARD 20)

add_executable(OperOverArithmetic OperOverArithmetic.cpp)
add_executable(OperOverAssign OperOverAssign.cpp)
add_executable(OperOverAssignComplex OperOverAssignComplex.cpp)
add_executable(OperOverAssignMove OperOverAssignMove.cpp)
add_executable(OperOverArray OperOverArray.cpp)
