cmake_minimum_required(VERSION 3.29)
project(Chapter06)

set(CMAKE_CXX_STANDARD 26)

add_executable(InheritSample InheritSample.cpp)
add_executable(MethodOver1 MethodOver1.cpp)
add_executable(MethodOver2 MethodOver2.cpp)
add_executable(InheritAndContructor1 InheritAndContructor1.cpp)
add_executable(InheritAndContructor2 InheritAndContructor2.cpp)
add_executable(SelectContructor SelectContructor.cpp)
